fundamentals_yaml/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  labels:
    app: nginx
spec:
  containers:
    - name: nginx
      image: public.ecr.aws/nginx/nginx:1.23
